--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>webgl</title>
+  <title>GL</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="icon" href="#">
@@ -9,17 +9,12 @@
   <script src="main.js"></script>
 
   <style>
-    body, html {
+    html, body {
       margin:   0;
       width:    100%;
       height:   100%;
       overflow: hidden;
-    }
-    body {
-      background-color: #141414;
-    }
-    canvas {
-      background-color: #000000; /* @Temporary. */
+      touch-action: none;
     }
   </style>
 </head>
