--- a/web/index.html
+++ b/web/index.html
@@ -16,9 +16,14 @@
       overflow: hidden;
       touch-action: none;
     }
+
+    canvas {
+      position: absolute;
+    }
   </style>
 </head>
 <body>
-  <canvas></canvas>
+  <canvas id="map"></canvas>
+  <canvas id="gui"></canvas>
 </body>
 </html>
