--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="icon" href="#">
 
-  <script src="main.js"></script>
+  <script src="script.js"></script>
 
   <style>
     html, body {
